--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo&family=Roboto&family=Spinnaker&display=swap');
 
 :root {
-    --first-color: #00367D;
+    /* --first-color: #00367D; */
+    --first-color: blue;
     --second-color: #FDD7A9;
     --gradient-color: linear-gradient(#FDD7A9,#00367D);
     --font-principal: 'Roboto', sans-serif;
