--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo&family=Roboto&family=Spinnaker&display=swap');
 
 :root {
-    --first-color: #00367D;
+    --first-color: #26E05B;
     /* --first-color: blue; */
-    --second-color: #FDD7A9;
-    --gradient-color: linear-gradient(#FDD7A9,#00367D);
+    --second-color: #fff;
+    --gradient-color: linear-gradient(#FFF, #26E05B);
     --font-principal: 'Roboto', sans-serif;
     --secondary-font: 'Spinnaker', sans-serif;
     --color-font: #E1E6F0;
@@ -134,7 +134,8 @@ body {
 }
 
 .slides:nth-child(1) {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://aps.sn/wp-content/uploads/2023/06/ECOLE-REFORME.jpg');
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('image/front-image.jpg'); */
+    background-image: url('image/front-image.jpg');
     background-size: cover;
     object-fit: cover;
 }
@@ -413,25 +414,31 @@ input {
     font-size: 20px;
     border: none;
     color: var(--first-color);
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #000;
     background: none;
 }
 input::placeholder {
     color: var(--first-color);
-    opacity: .5;
+    opacity: .2;
 }
 
 input:nth-child(1), input:nth-child(3) {
     margin-right: 24px;
 }
 textarea {
-    border: 1px solid #fff;
+    border: 1px solid #000;
     margin-top: 24px;
     padding: 8px;
     font-size: 20px;
 }
 
+textarea::placeholder {
+    color: var(--first-color);
+    opacity: .2;
+}
+
 .form-button {
+    cursor: pointer;
     margin-top: 24px;
     padding: 8px 16px;
     border: 1px solid var(--first-color);
@@ -450,16 +457,16 @@ textarea {
 
 
 .globe {
-    /* background-color: #0094EB; */
     background-color: var(--second-color);
-    /* color: #E1E6F0; */
-    /* color: #171B20; */
     color: var(--first-color);
+    display: flex;
+    flex-direction: column;
 }
 
 .globe img {
+    align-self: center;
     height: 150px;
-    width: 500px;
+    width: 300px;
 }
 
 #footer {
