--- a/sideProject/classe/class.css
+++ b/sideProject/classe/class.css
@@ -51,11 +51,10 @@
     justify-content: center;
     align-items: center;
     margin-top: 100px;
-    width: 400px;
-    height: 300px;
-    color: var(--second-color);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.unicef.org/senegal/sites/unicef.org.senegal/files/styles/hero_desktop/public/UNICEF%20Senegal%202019-%2008%200566.JPG?itok=zNBAAkpf');
-    background-size: cover;
+    width: 350px;
+    height: 200px;
+    color: var(--first-color);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #tout-classes .card-classe .head h3 {
@@ -95,4 +94,19 @@
 @keyframes scaleAndFade {
    from {width: 0}
     to {width: 100%}
+}
+
+
+
+@media screen and (max-width: 1000px) {
+    #tout-classes {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    #tout-classes .card-classe .head {
+        width: 300px;
+        height: 150px;
+    }
 }
